--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-markdown": "^6.0.1",
     "react-redux": "^7.2.2",
